some minor changes (stub login files)

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		"stylus": "*",
 		"nib": "*",
 		"passport": "*",
-		"jquery": "*"
+		"jquery": "*",
+		"passport-local": "*",
+		"connect-flash": "*"
 	}
 }
