--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "test_01",
 	"version": "0.0.1",
-	"private": "true",
+	"private": "false",
 	"dependencies": {
 		"express": "*",
 		"jade": "*",
